# Cpp_front

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  main.cpp  tsconfig.json
include/: __init__.h  try_it_out.h
routes/: __init__.h  cors_bullshit.h  index.h  intro.h  test.h  try_it_out.h
src/: main.cpp
static/css/: index.css  intro.css
static/js/: process.js  try_it_out.js
static/ts/: disqus.ts  process.ts  try_it_out.ts
templates/: about.html  camera.html  index.html  intro.html  test.html  try_it_out.html
